[gd_scene load_steps=5 format=3 uid="uid://bublgt0ersfbl"]

[ext_resource type="Theme" uid="uid://nd3emu45e715" path="res://dev_theme.tres" id="1_8u8n3"]
[ext_resource type="Script" path="res://scenes/scn_main.gd" id="1_yvcnl"]
[ext_resource type="Texture2D" uid="uid://dv8lgl04y8wer" path="res://images/temp_loading_splash.png" id="2_btjdu"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_yx1r8"]
blend_mode = 3

[node name="scn_main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvcnl")

[node name="tr_backdrop" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_yx1r8")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_btjdu")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="lbl_loading" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("1_8u8n3")
theme_override_font_sizes/font_size = 64
text = "Loading"

[node name="lbl_server_name" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_8u8n3")
theme_override_font_sizes/font_size = 64
text = "server name"

[node name="lbl_answer" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("1_8u8n3")
theme_override_font_sizes/font_size = 64
text = "Nothing received"

[node name="lbl_error" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("1_8u8n3")
theme_override_colors/font_color = Color(1, 0.12549, 0.0862745, 1)
theme_override_colors/font_shadow_color = Color(0.282353, 0.592157, 0.509804, 1)
theme_override_font_sizes/font_size = 64
text = "Error placeholder"

[node name="HTTPRequest_get_all_v1" type="HTTPRequest" parent="."]
use_threads = true
